prd_package/objects/MD_Appraisal_Form__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>A text description of the appraisal form.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for this appraisal form.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>IF(NOT(ISBLANK(Start_Date__c)) &amp;&amp; NOT(ISBLANK(End_Date__c)) , 
  Start_Date__c &lt; TODAY() &amp;&amp; End_Date__c &gt;= TODAY()
, IF(NOT(ISBLANK(Start_Date__c)), Start_Date__c &lt; TODAY()
  , IF(NOT(ISBLANK(End_Date__c)), End_Date__c &gt;= TODAY(), true)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Appraisal_Form_External_ID__c</fullName>
        <description>Appraisal Form Number</description>
        <externalId>true</externalId>
        <label>MD Appraisal Form External ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for this appraisal form.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of appraisal form</description>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MD Appraisal Form</label>
    <nameField>
        <label>MD Appraisal Form Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Appraisal Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>